<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemographicsFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/DOB"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDOBOP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDOBOP"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDOBOP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MaritalStatus"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMaritalStatusOP"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textViewMaritalStatusOP" />

    <TextView
        android:id="@+id/textViewMaritalStatusOP"
        android:layout_width="60dp"
        android:layout_height="14dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewDOBOP"
        app:layout_constraintTop_toBottomOf="@+id/textViewDOBOP" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EduLevel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEduLevelOP"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textViewEduLevelOP" />

    <TextView
        android:id="@+id/textViewEduLevelOP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewMaritalStatusOP"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaritalStatusOP" />
</androidx.constraintlayout.widget.ConstraintLayout>